@@ -5,6 +5,7 @@
  */
 package io.debezium.jdbc;
 
+import static io.debezium.util.NumberConversions.BYTE_BUFFER_ZERO;
 import static io.debezium.util.NumberConversions.BYTE_ZERO;
 import static io.debezium.util.NumberConversions.SHORT_FALSE;
 
@@ -63,15 +64,29 @@ import io.debezium.util.NumberConversions;
 public class JdbcValueConverters implements ValueConverterProvider {
 
     public enum DecimalMode {
-        PRECISE, DOUBLE, STRING;
+        PRECISE,
+        DOUBLE,
+        STRING;
     }
 
     public enum BigIntUnsignedMode {
-        PRECISE, LONG;
+        PRECISE,
+        LONG;
     }
 
     protected final Logger logger = LoggerFactory.getLogger(getClass());
+
     private final ZoneOffset defaultOffset;
+
+    /**
+     * Fallback value for TIMESTAMP WITH TZ is epoch
+     */
+    private final String fallbackTimestampWithTimeZone;
+
+    /**
+     * Fallback value for TIME WITH TZ is 00:00
+     */
+    private final String fallbackTimeWithTimeZone;
     protected final boolean adaptiveTimePrecisionMode;
     protected final boolean adaptiveTimeMicrosecondsPrecisionMode;
     protected final DecimalMode decimalMode;
@@ -110,6 +125,15 @@ public class JdbcValueConverters implements ValueConverterProvider {
         this.decimalMode = decimalMode != null ? decimalMode : DecimalMode.PRECISE;
         this.adjuster = adjuster;
         this.bigIntUnsignedMode = bigIntUnsignedMode != null ? bigIntUnsignedMode : BigIntUnsignedMode.PRECISE;
+
+        this.fallbackTimestampWithTimeZone = ZonedTimestamp.toIsoString(
+                OffsetDateTime.of(LocalDate.ofEpochDay(0), LocalTime.MIDNIGHT, defaultOffset),
+                defaultOffset,
+                adjuster);
+        this.fallbackTimeWithTimeZone = ZonedTime.toIsoString(
+                OffsetTime.of(LocalTime.MIDNIGHT, defaultOffset),
+                defaultOffset,
+                adjuster);
     }
 
     @Override
@@ -162,9 +186,9 @@ public class JdbcValueConverters implements ValueConverterProvider {
                 return SchemaBuilder.float64();
             case Types.NUMERIC:
             case Types.DECIMAL:
-                return SpecialValueDecimal.builder(decimalMode, column.scale());
+                return SpecialValueDecimal.builder(decimalMode, column.length(), column.scale().get());
 
-                // Fixed-length string values
+            // Fixed-length string values
             case Types.CHAR:
             case Types.NCHAR:
             case Types.NVARCHAR:
@@ -187,19 +211,27 @@ public class JdbcValueConverters implements ValueConverterProvider {
                 }
                 return org.apache.kafka.connect.data.Date.builder();
             case Types.TIME:
-                if(adaptiveTimeMicrosecondsPrecisionMode) {
+                if (adaptiveTimeMicrosecondsPrecisionMode) {
                     return MicroTime.builder();
                 }
                 if (adaptiveTimePrecisionMode) {
-                    if (column.length() <= 3) return Time.builder();
-                    if (column.length() <= 6) return MicroTime.builder();
+                    if (getTimePrecision(column) <= 3) {
+                        return Time.builder();
+                    }
+                    if (getTimePrecision(column) <= 6) {
+                        return MicroTime.builder();
+                    }
                     return NanoTime.builder();
                 }
                 return org.apache.kafka.connect.data.Time.builder();
             case Types.TIMESTAMP:
                 if (adaptiveTimePrecisionMode || adaptiveTimeMicrosecondsPrecisionMode) {
-                    if (column.length() <= 3) return Timestamp.builder();
-                    if (column.length() <= 6) return MicroTimestamp.builder();
+                    if (getTimePrecision(column) <= 3) {
+                        return Timestamp.builder();
+                    }
+                    if (getTimePrecision(column) <= 6) {
+                        return MicroTimestamp.builder();
+                    }
                     return NanoTimestamp.builder();
                 }
                 return org.apache.kafka.connect.data.Timestamp.builder();
@@ -267,7 +299,7 @@ public class JdbcValueConverters implements ValueConverterProvider {
             case Types.DECIMAL:
                 return (data) -> convertDecimal(column, fieldDefn, data);
 
-                // String values
+            // String values
             case Types.CHAR: // variable-length
             case Types.VARCHAR: // variable-length
             case Types.LONGVARCHAR: // variable-length
@@ -287,19 +319,15 @@ public class JdbcValueConverters implements ValueConverterProvider {
                 }
                 return (data) -> convertDateToEpochDaysAsDate(column, fieldDefn, data);
             case Types.TIME:
-                if(adaptiveTimeMicrosecondsPrecisionMode) {
-                    return data -> convertTimeToMicrosPastMidnight(column, fieldDefn, data);
-                }
-                if (adaptiveTimePrecisionMode) {
-                    if (column.length() <= 3) return data -> convertTimeToMillisPastMidnight(column, fieldDefn, data);
-                    if (column.length() <= 6) return data -> convertTimeToMicrosPastMidnight(column, fieldDefn, data);
-                    return (data) -> convertTimeToNanosPastMidnight(column, fieldDefn, data);
-                }
-                return (data) -> convertTimeToMillisPastMidnightAsDate(column, fieldDefn, data);
+                return (data) -> convertTime(column, fieldDefn, data);
             case Types.TIMESTAMP:
                 if (adaptiveTimePrecisionMode || adaptiveTimeMicrosecondsPrecisionMode) {
-                    if (column.length() <= 3) return data -> convertTimestampToEpochMillis(column, fieldDefn, data);
-                    if (column.length() <= 6) return data -> convertTimestampToEpochMicros(column, fieldDefn, data);
+                    if (getTimePrecision(column) <= 3) {
+                        return data -> convertTimestampToEpochMillis(column, fieldDefn, data);
+                    }
+                    if (getTimePrecision(column) <= 6) {
+                        return data -> convertTimestampToEpochMicros(column, fieldDefn, data);
+                    }
                     return (data) -> convertTimestampToEpochNanos(column, fieldDefn, data);
                 }
                 return (data) -> convertTimestampToEpochMillisAsDate(column, fieldDefn, data);
@@ -350,18 +378,13 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertTimestampWithZone(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            data = OffsetDateTime.of(LocalDate.ofEpochDay(0), LocalTime.MIDNIGHT, defaultOffset); // return epoch
-        }
-        try {
-            return ZonedTimestamp.toIsoString(data, defaultOffset, adjuster);
-        } catch (IllegalArgumentException e) {
-            return handleUnknownData(column, fieldDefn, data);
-        }
+        return convertValue(column, fieldDefn, data, fallbackTimestampWithTimeZone, (r) -> {
+            try {
+                r.deliver(ZonedTimestamp.toIsoString(data, defaultOffset, adjuster));
+            }
+            catch (IllegalArgumentException e) {
+            }
+        });
     }
 
     /**
@@ -381,17 +404,31 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertTimeWithZone(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
+        return convertValue(column, fieldDefn, data, fallbackTimeWithTimeZone, (r) -> {
+            try {
+                r.deliver(ZonedTime.toIsoString(data, defaultOffset, adjuster));
+            }
+            catch (IllegalArgumentException e) {
+            }
+        });
+    }
+
+    protected Object convertTime(Column column, Field fieldDefn, Object data) {
+        if (adaptiveTimeMicrosecondsPrecisionMode) {
+            return convertTimeToMicrosPastMidnight(column, fieldDefn, data);
         }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            data = OffsetTime.of(LocalTime.MIDNIGHT, defaultOffset); // return epoch time
+        if (adaptiveTimePrecisionMode) {
+            if (getTimePrecision(column) <= 3) {
+                return convertTimeToMillisPastMidnight(column, fieldDefn, data);
+            }
+            if (getTimePrecision(column) <= 6) {
+                return convertTimeToMicrosPastMidnight(column, fieldDefn, data);
+            }
+            return convertTimeToNanosPastMidnight(column, fieldDefn, data);
         }
-        try {
-            return ZonedTime.toIsoString(data, defaultOffset, adjuster);
-        } catch (IllegalArgumentException e) {
-            return handleUnknownData(column, fieldDefn, data);
+        // "connect" mode
+        else {
+            return convertTimeToMillisPastMidnightAsDate(column, fieldDefn, data);
         }
     }
 
@@ -410,18 +447,14 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertTimestampToEpochMillis(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0L; // return epoch
-        }
-        try {
-            return Timestamp.toEpochMillis(data, adjuster);
-        } catch (IllegalArgumentException e) {
-            return handleUnknownData(column, fieldDefn, data);
-        }
+        // epoch is the fallback value
+        return convertValue(column, fieldDefn, data, 0L, (r) -> {
+            try {
+                r.deliver(Timestamp.toEpochMillis(data, adjuster));
+            }
+            catch (IllegalArgumentException e) {
+            }
+        });
     }
 
     /**
@@ -439,18 +472,14 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertTimestampToEpochMicros(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0L; // return epoch
-        }
-        try {
-            return MicroTimestamp.toEpochMicros(data, adjuster);
-        } catch (IllegalArgumentException e) {
-            return handleUnknownData(column, fieldDefn, data);
-        }
+        // epoch is the fallback value
+        return convertValue(column, fieldDefn, data, 0L, (r) -> {
+            try {
+                r.deliver(MicroTimestamp.toEpochMicros(data, adjuster));
+            }
+            catch (IllegalArgumentException e) {
+            }
+        });
     }
 
     /**
@@ -468,18 +497,14 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertTimestampToEpochNanos(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0L; // return epoch
-        }
-        try {
-            return NanoTimestamp.toEpochNanos(data, adjuster);
-        } catch (IllegalArgumentException e) {
-            return handleUnknownData(column, fieldDefn, data);
-        }
+        // epoch is the fallback value
+        return convertValue(column, fieldDefn, data, 0L, (r) -> {
+            try {
+                r.deliver(NanoTimestamp.toEpochNanos(data, adjuster));
+            }
+            catch (IllegalArgumentException e) {
+            }
+        });
     }
 
     /**
@@ -497,18 +522,14 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertTimestampToEpochMillisAsDate(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return new java.util.Date(0L); // return epoch
-        }
-        try {
-            return new java.util.Date(Timestamp.toEpochMillis(data, adjuster));
-        } catch (IllegalArgumentException e) {
-            return handleUnknownData(column, fieldDefn, data);
-        }
+        // epoch is the fallback value
+        return convertValue(column, fieldDefn, data, new java.util.Date(0L), (r) -> {
+            try {
+                r.deliver(new java.util.Date(Timestamp.toEpochMillis(data, adjuster)));
+            }
+            catch (IllegalArgumentException e) {
+            }
+        });
     }
 
     /**
@@ -527,18 +548,14 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertTimeToMillisPastMidnight(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0; // return epoch
-        }
-        try {
-            return Time.toMilliOfDay(data, adjuster);
-        } catch (IllegalArgumentException e) {
-            return handleUnknownData(column, fieldDefn, data);
-        }
+        // epoch is the fallback value
+        return convertValue(column, fieldDefn, data, 0, (r) -> {
+            try {
+                r.deliver(Time.toMilliOfDay(data, supportsLargeTimeValues()));
+            }
+            catch (IllegalArgumentException e) {
+            }
+        });
     }
 
     /**
@@ -557,18 +574,14 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertTimeToMicrosPastMidnight(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0L; // return epoch
-        }
-        try {
-            return MicroTime.toMicroOfDay(data, adjuster);
-        } catch (IllegalArgumentException e) {
-            return handleUnknownData(column, fieldDefn, data);
-        }
+        // epoch is the fallback value
+        return convertValue(column, fieldDefn, data, 0L, (r) -> {
+            try {
+                r.deliver(MicroTime.toMicroOfDay(data, supportsLargeTimeValues()));
+            }
+            catch (IllegalArgumentException e) {
+            }
+        });
     }
 
     /**
@@ -587,18 +600,14 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertTimeToNanosPastMidnight(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0L; // return epoch
-        }
-        try {
-            return NanoTime.toNanoOfDay(data, adjuster);
-        } catch (IllegalArgumentException e) {
-            return handleUnknownData(column, fieldDefn, data);
-        }
+        // epoch is the fallback value
+        return convertValue(column, fieldDefn, data, 0L, (r) -> {
+            try {
+                r.deliver(NanoTime.toNanoOfDay(data, supportsLargeTimeValues()));
+            }
+            catch (IllegalArgumentException e) {
+            }
+        });
     }
 
     /**
@@ -617,18 +626,14 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertTimeToMillisPastMidnightAsDate(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0L; // return epoch
-        }
-        try {
-            return new java.util.Date(Time.toMilliOfDay(data, adjuster));
-        } catch (IllegalArgumentException e) {
-            return handleUnknownData(column, fieldDefn, data);
-        }
+        // epoch is the fallback value
+        return convertValue(column, fieldDefn, data, new java.util.Date(0L), (r) -> {
+            try {
+                r.deliver(new java.util.Date(Time.toMilliOfDay(data, supportsLargeTimeValues())));
+            }
+            catch (IllegalArgumentException e) {
+            }
+        });
     }
 
     /**
@@ -646,20 +651,16 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertDateToEpochDays(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0; // return epoch
-        }
-        try {
-            return Date.toEpochDay(data, adjuster);
-        } catch (IllegalArgumentException e) {
-            logger.warn("Unexpected JDBC DATE value for field {} with schema {}: class={}, value={}", fieldDefn.name(),
+        // epoch is the fallback value
+        return convertValue(column, fieldDefn, data, 0, (r) -> {
+            try {
+                r.deliver(Date.toEpochDay(data, adjuster));
+            }
+            catch (IllegalArgumentException e) {
+                logger.warn("Unexpected JDBC DATE value for field {} with schema {}: class={}, value={}", fieldDefn.name(),
                         fieldDefn.schema(), data.getClass(), data);
-            return handleUnknownData(column, fieldDefn, data);
-        }
+            }
+        });
     }
 
     /**
@@ -678,22 +679,18 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertDateToEpochDaysAsDate(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return new java.util.Date(0L); // return epoch
-        }
-        try {
-            int epochDay = Date.toEpochDay(data, adjuster);
-            long epochMillis = TimeUnit.DAYS.toMillis(epochDay);
-            return new java.util.Date(epochMillis);
-        } catch (IllegalArgumentException e) {
-            logger.warn("Unexpected JDBC DATE value for field {} with schema {}: class={}, value={}", fieldDefn.name(),
+        // epoch is the fallback value
+        return convertValue(column, fieldDefn, data, new java.util.Date(0L), (r) -> {
+            try {
+                int epochDay = Date.toEpochDay(data, adjuster);
+                long epochMillis = TimeUnit.DAYS.toMillis(epochDay);
+                r.deliver(new java.util.Date(epochMillis));
+            }
+            catch (IllegalArgumentException e) {
+                logger.warn("Unexpected JDBC DATE value for field {} with schema {}: class={}, value={}", fieldDefn.name(),
                         fieldDefn.schema(), data.getClass(), data);
-            return null;
-        }
+            }
+        });
     }
 
     /**
@@ -707,26 +704,23 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertBinary(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            data = BYTE_ZERO;
-        }
-        if (data instanceof char[]) {
-            data = new String((char[]) data); // convert to string
-        }
-        if (data instanceof String) {
-            // This was encoded as a hexadecimal string, but we receive it as a normal string ...
-            data = ((String) data).getBytes();
-        }
-        if (data instanceof byte[]) {
-            return convertByteArray(column, (byte[]) data);
-        }
-
-        // An unexpected value
-        return unexpectedBinary(data, fieldDefn);
+        return convertValue(column, fieldDefn, data, BYTE_ZERO, (r) -> {
+            Object dataMut = data;
+            if (dataMut instanceof char[]) {
+                dataMut = new String((char[]) dataMut); // convert to string
+            }
+            if (dataMut instanceof String) {
+                // This was encoded as a hexadecimal string, but we receive it as a normal string ...
+                dataMut = ((String) dataMut).getBytes();
+            }
+            if (dataMut instanceof byte[]) {
+                r.deliver(convertByteArray(column, (byte[]) dataMut));
+            }
+            else {
+                // An unexpected value
+                r.deliver(unexpectedBinary(dataMut, fieldDefn));
+            }
+        });
     }
 
     /**
@@ -751,7 +745,7 @@ public class JdbcValueConverters implements ValueConverterProvider {
      */
     protected byte[] unexpectedBinary(Object value, Field fieldDefn) {
         logger.warn("Unexpected JDBC BINARY value for field {} with schema {}: class={}, value={}", fieldDefn.name(),
-                    fieldDefn.schema(), value.getClass(), value);
+                fieldDefn.schema(), value.getClass(), value);
         return null;
     }
 
@@ -778,22 +772,21 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertSmallInt(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return SHORT_FALSE;
-        }
-        if (data instanceof Short) return data;
-        if (data instanceof Number) {
-            Number value = (Number) data;
-            return new Short(value.shortValue());
-        }
-        if (data instanceof Boolean) {
-            return NumberConversions.getShort((Boolean) data);
-        }
-        return handleUnknownData(column, fieldDefn, data);
+        return convertValue(column, fieldDefn, data, SHORT_FALSE, (r) -> {
+            if (data instanceof Short) {
+                r.deliver(data);
+            }
+            else if (data instanceof Number) {
+                Number value = (Number) data;
+                r.deliver(Short.valueOf(value.shortValue()));
+            }
+            else if (data instanceof Boolean) {
+                r.deliver(NumberConversions.getShort((Boolean) data));
+            }
+            else if (data instanceof String) {
+                r.deliver(Short.valueOf((String) data));
+            }
+        });
     }
 
     /**
@@ -806,22 +799,21 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertInteger(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0;
-        }
-        if (data instanceof Integer) return data;
-        if (data instanceof Number) {
-            Number value = (Number) data;
-            return Integer.valueOf(value.intValue());
-        }
-        if (data instanceof Boolean) {
-            return NumberConversions.getInteger((Boolean) data);
-        }
-        return handleUnknownData(column, fieldDefn, data);
+        return convertValue(column, fieldDefn, data, 0, (r) -> {
+            if (data instanceof Integer) {
+                r.deliver(data);
+            }
+            else if (data instanceof Number) {
+                Number value = (Number) data;
+                r.deliver(Integer.valueOf(value.intValue()));
+            }
+            else if (data instanceof Boolean) {
+                r.deliver(NumberConversions.getInteger((Boolean) data));
+            }
+            else if (data instanceof String) {
+                r.deliver(Integer.valueOf((String) data));
+            }
+        });
     }
 
     /**
@@ -834,22 +826,21 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertBigInt(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0L;
-        }
-        if (data instanceof Long) return data;
-        if (data instanceof Number) {
-            Number value = (Number) data;
-            return Long.valueOf(value.longValue());
-        }
-        if (data instanceof Boolean) {
-            return NumberConversions.getLong((Boolean) data);
-        }
-        return handleUnknownData(column, fieldDefn, data);
+        return convertValue(column, fieldDefn, data, 0L, (r) -> {
+            if (data instanceof Long) {
+                r.deliver(data);
+            }
+            else if (data instanceof Number) {
+                Number value = (Number) data;
+                r.deliver(Long.valueOf(value.longValue()));
+            }
+            else if (data instanceof Boolean) {
+                r.deliver(NumberConversions.getLong((Boolean) data));
+            }
+            else if (data instanceof String) {
+                r.deliver(Long.valueOf((String) data));
+            }
+        });
     }
 
     /**
@@ -875,26 +866,22 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertDouble(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0.0d;
-        }
-        if (data instanceof Double) return data;
-        if (data instanceof Number) {
-            // Includes BigDecimal and other numeric values ...
-            Number value = (Number) data;
-            return Double.valueOf(value.doubleValue());
-        }
-        if (data instanceof SpecialValueDecimal) {
-            return ((SpecialValueDecimal)data).toDouble();
-        }
-        if (data instanceof Boolean) {
-            return NumberConversions.getDouble((Boolean) data);
-        }
-        return handleUnknownData(column, fieldDefn, data);
+        return convertValue(column, fieldDefn, data, 0.0d, (r) -> {
+            if (data instanceof Double) {
+                r.deliver(data);
+            }
+            else if (data instanceof Number) {
+                // Includes BigDecimal and other numeric values ...
+                Number value = (Number) data;
+                r.deliver(Double.valueOf(value.doubleValue()));
+            }
+            else if (data instanceof SpecialValueDecimal) {
+                r.deliver(((SpecialValueDecimal) data).toDouble());
+            }
+            else if (data instanceof Boolean) {
+                r.deliver(NumberConversions.getDouble((Boolean) data));
+            }
+        });
     }
 
     /**
@@ -907,23 +894,19 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertReal(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return 0.0f;
-        }
-        if (data instanceof Float) return data;
-        if (data instanceof Number) {
-            // Includes BigDecimal and other numeric values ...
-            Number value = (Number) data;
-            return Float.valueOf(value.floatValue());
-        }
-        if (data instanceof Boolean) {
-            return NumberConversions.getFloat((Boolean) data);
-        }
-        return handleUnknownData(column, fieldDefn, data);
+        return convertValue(column, fieldDefn, data, 0.0f, (r) -> {
+            if (data instanceof Float) {
+                r.deliver(data);
+            }
+            else if (data instanceof Number) {
+                // Includes BigDecimal and other numeric values ...
+                Number value = (Number) data;
+                r.deliver(Float.valueOf(value.floatValue()));
+            }
+            else if (data instanceof Boolean) {
+                r.deliver(NumberConversions.getFloat((Boolean) data));
+            }
+        });
     }
 
     /**
@@ -950,46 +933,42 @@ public class JdbcValueConverters implements ValueConverterProvider {
      */
     protected Object convertDecimal(Column column, Field fieldDefn, Object data) {
         if (data instanceof SpecialValueDecimal) {
-            return SpecialValueDecimal.fromLogical((SpecialValueDecimal)data, decimalMode, column.name());
+            return SpecialValueDecimal.fromLogical((SpecialValueDecimal) data, decimalMode, column.name());
         }
         Object decimal = toBigDecimal(column, fieldDefn, data);
         if (decimal instanceof BigDecimal) {
-            return SpecialValueDecimal.fromLogical(new SpecialValueDecimal((BigDecimal)decimal), decimalMode, column.name());
+            return SpecialValueDecimal.fromLogical(new SpecialValueDecimal((BigDecimal) decimal), decimalMode, column.name());
         }
         return decimal;
     }
 
     protected Object toBigDecimal(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) {
-                return null;
+        return convertValue(column, fieldDefn, data, BigDecimal.ZERO, (r) -> {
+            if (data instanceof BigDecimal) {
+                r.deliver(data);
             }
-            else {
-                return BigDecimal.ZERO;
+            else if (data instanceof Boolean) {
+                r.deliver(NumberConversions.getBigDecimal((Boolean) data));
             }
-        }
-        BigDecimal decimal = null;
-        if (data instanceof BigDecimal)
-            decimal = (BigDecimal) data;
-        else if (data instanceof Boolean)
-            decimal = NumberConversions.getBigDecimal((Boolean) data);
-        else if (data instanceof Short)
-            decimal = new BigDecimal(((Short) data).intValue());
-        else if (data instanceof Integer)
-            decimal = new BigDecimal(((Integer) data).intValue());
-        else if (data instanceof Long)
-            decimal = BigDecimal.valueOf(((Long) data).longValue());
-        else if (data instanceof Float)
-            decimal = BigDecimal.valueOf(((Float) data).doubleValue());
-        else if (data instanceof Double)
-            decimal = BigDecimal.valueOf(((Double) data).doubleValue());
-        else {
-            return handleUnknownData(column, fieldDefn, data);
-        }
-        return decimal;
+            else if (data instanceof Short) {
+                r.deliver(new BigDecimal(((Short) data).intValue()));
+            }
+            else if (data instanceof Integer) {
+                r.deliver(new BigDecimal(((Integer) data).intValue()));
+            }
+            else if (data instanceof Long) {
+                r.deliver(BigDecimal.valueOf(((Long) data).longValue()));
+            }
+            else if (data instanceof Float) {
+                r.deliver(BigDecimal.valueOf(((Float) data).doubleValue()));
+            }
+            else if (data instanceof Double) {
+                r.deliver(BigDecimal.valueOf(((Double) data).doubleValue()));
+            }
+            else if (data instanceof String) {
+                r.deliver(new BigDecimal((String) data));
+            }
+        });
     }
 
     /**
@@ -1004,22 +983,20 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertString(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return "";
-        }
-        if (data instanceof SQLXML) {
-            try {
-                return ((SQLXML) data).getString();
-            } catch (SQLException e) {
-                throw new RuntimeException("Error processing data from " + column.jdbcType() + " and column " + column +
-                        ": class=" + data.getClass(), e);
+        return convertValue(column, fieldDefn, data, "", (r) -> {
+            if (data instanceof SQLXML) {
+                try {
+                    r.deliver(((SQLXML) data).getString());
+                }
+                catch (SQLException e) {
+                    throw new RuntimeException("Error processing data from " + column.jdbcType() + " and column " + column +
+                            ": class=" + data.getClass(), e);
+                }
             }
-        }
-        return data.toString();
+            else {
+                r.deliver(data.toString());
+            }
+        });
     }
 
     /**
@@ -1032,18 +1009,12 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertRowId(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return ByteBuffer.wrap(new byte[0]);
-        }
-        if (data instanceof java.sql.RowId) {
-            java.sql.RowId row = (java.sql.RowId) data;
-            return ByteBuffer.wrap(row.getBytes());
-        }
-        return handleUnknownData(column, fieldDefn, data);
+        return convertValue(column, fieldDefn, data, BYTE_BUFFER_ZERO, (r) -> {
+            if (data instanceof java.sql.RowId) {
+                java.sql.RowId row = (java.sql.RowId) data;
+                r.deliver(ByteBuffer.wrap(row.getBytes()));
+            }
+        });
     }
 
     /**
@@ -1056,22 +1027,24 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertBit(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return false;
-        }
-        if (data instanceof Boolean) return data;
-        if (data instanceof Short) return ((Short) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE;
-        if (data instanceof Integer) return ((Integer) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE;
-        if (data instanceof Long) return ((Long) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE;
-        if (data instanceof BitSet) {
-            BitSet value = (BitSet) data;
-            return value.get(0);
-        }
-        return handleUnknownData(column, fieldDefn, data);
+        return convertValue(column, fieldDefn, data, false, (r) -> {
+            if (data instanceof Boolean) {
+                r.deliver(data);
+            }
+            else if (data instanceof Short) {
+                r.deliver(((Short) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE);
+            }
+            else if (data instanceof Integer) {
+                r.deliver(((Integer) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE);
+            }
+            else if (data instanceof Long) {
+                r.deliver(((Long) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE);
+            }
+            else if (data instanceof BitSet) {
+                BitSet value = (BitSet) data;
+                r.deliver(value.get(0));
+            }
+        });
     }
 
     /**
@@ -1085,63 +1058,57 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertBits(Column column, Field fieldDefn, Object data, int numBytes) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return false;
-        }
-        if (data instanceof Boolean) {
-            Boolean value = (Boolean) data;
-            return new byte[] { value.booleanValue() ? (byte) 1 : (byte) 0 };
-        }
-        if (data instanceof Short) {
-            Short value = (Short) data;
-            ByteBuffer buffer = ByteBuffer.allocate(Short.BYTES);
-            buffer.order(ByteOrder.LITTLE_ENDIAN);
-            buffer.putShort(value.shortValue());
-            return buffer.array();
-        }
-        if (data instanceof Integer) {
-            Integer value = (Integer) data;
-            ByteBuffer buffer = ByteBuffer.allocate(Integer.BYTES);
-            buffer.order(ByteOrder.LITTLE_ENDIAN);
-            buffer.putInt(value.intValue());
-            return buffer.array();
-        }
-        if (data instanceof Long) {
-            Long value = (Long) data;
-            ByteBuffer buffer = ByteBuffer.allocate(Long.BYTES);
-            buffer.order(ByteOrder.LITTLE_ENDIAN);
-            buffer.putLong(value.longValue());
-            return buffer.array();
-        }
-        if (data instanceof byte[]) {
-            byte[] bytes = (byte[]) data;
-            if (bytes.length == 1) {
-                return bytes;
+        return convertValue(column, fieldDefn, data, new byte[0], (r) -> {
+            if (data instanceof Boolean) {
+                Boolean value = (Boolean) data;
+                r.deliver(new byte[]{ value.booleanValue() ? (byte) 1 : (byte) 0 });
             }
-            if (byteOrderOfBitType() == ByteOrder.BIG_ENDIAN) {
-                // Reverse it to little endian ...
-                int i = 0;
-                int j = bytes.length - 1;
-                byte tmp;
-                while (j > i) {
-                    tmp = bytes[j];
-                    bytes[j] = bytes[i];
-                    bytes[i] = tmp;
-                    ++i;
-                    --j;
+            else if (data instanceof Short) {
+                Short value = (Short) data;
+                ByteBuffer buffer = ByteBuffer.allocate(Short.BYTES);
+                buffer.order(ByteOrder.LITTLE_ENDIAN);
+                buffer.putShort(value.shortValue());
+                r.deliver(buffer.array());
+            }
+            else if (data instanceof Integer) {
+                Integer value = (Integer) data;
+                ByteBuffer buffer = ByteBuffer.allocate(Integer.BYTES);
+                buffer.order(ByteOrder.LITTLE_ENDIAN);
+                buffer.putInt(value.intValue());
+                r.deliver(buffer.array());
+            }
+            else if (data instanceof Long) {
+                Long value = (Long) data;
+                ByteBuffer buffer = ByteBuffer.allocate(Long.BYTES);
+                buffer.order(ByteOrder.LITTLE_ENDIAN);
+                buffer.putLong(value.longValue());
+                r.deliver(buffer.array());
+            }
+            else if (data instanceof byte[]) {
+                byte[] bytes = (byte[]) data;
+                if (bytes.length == 1) {
+                    r.deliver(bytes);
                 }
+                if (byteOrderOfBitType() == ByteOrder.BIG_ENDIAN) {
+                    // Reverse it to little endian ...
+                    int i = 0;
+                    int j = bytes.length - 1;
+                    byte tmp;
+                    while (j > i) {
+                        tmp = bytes[j];
+                        bytes[j] = bytes[i];
+                        bytes[i] = tmp;
+                        ++i;
+                        --j;
+                    }
+                }
+                r.deliver(padLittleEndian(numBytes, bytes));
             }
-            return padLittleEndian(numBytes, bytes);
-        }
-        if (data instanceof BitSet) {
-            byte[] bytes = ((BitSet) data).toByteArray();
-            return padLittleEndian(numBytes, bytes);
-        }
-        return handleUnknownData(column, fieldDefn, data);
+            else if (data instanceof BitSet) {
+                byte[] bytes = ((BitSet) data).toByteArray();
+                r.deliver(padLittleEndian(numBytes, bytes));
+            }
+        });
     }
 
     protected byte[] padLittleEndian(int numBytes, byte[] data) {
@@ -1179,18 +1146,20 @@ public class JdbcValueConverters implements ValueConverterProvider {
      * @throws IllegalArgumentException if the value could not be converted but the column does not allow nulls
      */
     protected Object convertBoolean(Column column, Field fieldDefn, Object data) {
-        if (data == null) {
-            data = fieldDefn.schema().defaultValue();
-        }
-        if (data == null) {
-            if (column.isOptional()) return null;
-            return false;
-        }
-        if (data instanceof Boolean) return data;
-        if (data instanceof Short) return ((Short) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE;
-        if (data instanceof Integer) return ((Integer) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE;
-        if (data instanceof Long) return ((Long) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE;
-        return handleUnknownData(column, fieldDefn, data);
+        return convertValue(column, fieldDefn, data, false, (r) -> {
+            if (data instanceof Boolean) {
+                r.deliver(data);
+            }
+            else if (data instanceof Short) {
+                r.deliver(((Short) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE);
+            }
+            else if (data instanceof Integer) {
+                r.deliver(((Integer) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE);
+            }
+            else if (data instanceof Long) {
+                r.deliver(((Long) data).intValue() == 0 ? Boolean.FALSE : Boolean.TRUE);
+            }
+        });
     }
 
     /**
@@ -1205,12 +1174,61 @@ public class JdbcValueConverters implements ValueConverterProvider {
     protected Object handleUnknownData(Column column, Field fieldDefn, Object data) {
         if (column.isOptional() || fieldDefn.schema().isOptional()) {
             Class<?> dataClass = data.getClass();
-            logger.warn("Unexpected value for JDBC type {} and column {}: class={}", column.jdbcType(), column,
+            if (logger.isWarnEnabled()) {
+                logger.warn("Unexpected value for JDBC type {} and column {}: class={}", column.jdbcType(), column,
                         dataClass.isArray() ? dataClass.getSimpleName() : dataClass.getName()); // don't include value in case its
                                                                                                 // sensitive
+            }
             return null;
         }
         throw new IllegalArgumentException("Unexpected value for JDBC type " + column.jdbcType() + " and column " + column +
                 ": class=" + data.getClass()); // don't include value in case its sensitive
+    }
+
+    protected int getTimePrecision(Column column) {
+        return column.length();
+    }
+
+    /**
+     * Converts the given value for the given column/field.
+     *
+     * @param column
+     *            describing the {@code data} value; never null
+     * @param fieldDefn
+     *            the field definition; never null
+     * @param data
+     *            the data object to be converted into a {@link Date Kafka Connect date} type
+     * @param fallback
+     *            value that will be applied in case the column is defined as NOT NULL without a default value, but we
+     *            still received no value; may happen e.g. when enabling MySQL's non-strict mode
+     * @param callback
+     *            conversion routine that will be invoked in case the value is not null
+     *
+     * @return The converted value. Will be {@code null} if the inbound value was {@code null} and the column is
+     *         optional. Will be the column's default value (converted to the corresponding KC type, if the inbound
+     *         value was {@code null}, the column is non-optional and has a default value. Will be {@code fallback} if
+     *         the inbound value was {@code null}, the column is non-optional and has no default value. Otherwise, it
+     *         will be the value produced by {@code callback} and lastly the result returned by
+     *         {@link #handleUnknownData(Column, Field, Object)}.
+     */
+    protected Object convertValue(Column column, Field fieldDefn, Object data, Object fallback, ValueConversionCallback callback) {
+        if (data == null) {
+            if (column.isOptional()) {
+                return null;
+            }
+            final Object schemaDefault = fieldDefn.schema().defaultValue();
+            return schemaDefault != null ? schemaDefault : fallback;
+        }
+        logger.trace("Value from data object: *** {} ***", data);
+
+        final ResultReceiver r = ResultReceiver.create();
+        callback.convert(r);
+        logger.trace("Callback is: {}", callback);
+        logger.trace("Value from ResultReceiver: {}", r);
+        return r.hasReceived() ? r.get() : handleUnknownData(column, fieldDefn, data);
+    }
+
+    private boolean supportsLargeTimeValues() {
+        return adaptiveTimePrecisionMode || adaptiveTimeMicrosecondsPrecisionMode;
     }
 }
